<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_department"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_department" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_chat_room"
                android:icon="@android:drawable/sym_action_chat"
                android:title="@string/menu_chat" />
            <item
                android:id="@+id/fpno_portal"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/load_portal" />
        </menu>
    </item>

</menu>
