<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsDetail_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">


        <Button
            android:id="@+id/register_button"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button"
            android:ellipsize="none"
            android:text="@string/register"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/user_reg_confirm_pswd"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/user_reg_confirm_pswd"
            app:layout_constraintTop_toBottomOf="@+id/spinner_department" />

        <EditText
            android:id="@+id/reg_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/login_textbox"
            android:drawableStart="@drawable/ic_action_name"
            android:ems="10"
            android:hint="@string/reg_user_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <EditText
            android:id="@+id/reg_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_textbox"
            android:drawableStart="@drawable/ic_action_phone"
            android:ems="10"
            android:hint="@string/reg_text_phone"
            android:inputType="number|textPersonName|phone"
            app:layout_constraintEnd_toEndOf="@+id/reg_user_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/reg_user_name"
            app:layout_constraintTop_toBottomOf="@+id/reg_user_name" />

        <EditText
            android:id="@+id/user_register_email"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_textbox"
            android:drawableStart="@drawable/ic_action_mail"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="@+id/reg_phone"
            app:layout_constraintStart_toStartOf="@+id/reg_phone"
            app:layout_constraintTop_toBottomOf="@+id/reg_phone" />

        <EditText
            android:id="@+id/user_reg_confirm_pswd"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_textbox"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="@+id/user_register_pswd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/user_register_pswd"
            app:layout_constraintTop_toBottomOf="@+id/user_register_pswd" />

        <EditText
            android:id="@+id/user_register_pswd"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/login_textbox"
            android:drawableStart="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_black"
            app:layout_constraintEnd_toEndOf="@+id/user_register_email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/user_register_email"
            app:layout_constraintTop_toBottomOf="@+id/user_register_email" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/fpno_logo" />

        <ProgressBar
            android:id="@+id/progressBar_hor"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <Spinner
            android:id="@+id/spinner_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:entries="@array/department_entries"
            android:scrollbarSize="4dp"
            app:layout_constraintEnd_toEndOf="@+id/user_reg_confirm_pswd"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/user_reg_confirm_pswd"
            app:layout_constraintTop_toBottomOf="@+id/user_reg_confirm_pswd" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="Already have an account?"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_hor" />

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_text"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.652"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_hor" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/authors"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>